--- a/style.css
+++ b/style.css
@@ -472,11 +472,9 @@ footer{
       gap: 2rem;
   }
 }
-@media screen and (min-width: 2400px){
-  footer{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+
+@media(width > 2000px){
+  .banner{
+    height: 50vh;
   }
 }
